--- a/index.html
+++ b/index.html
@@ -29,30 +29,27 @@
 		<meta name="author" content="Blitzlord" />
 		<base href="/" />
 		<link rel="canonical" href="https://terastal.net/" />
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
-			gtag('config', 'G-8L9PXM6PDZ');
-		</script>
-		<!-- Bootstrap -->
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-3c93ec44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-52d3db57.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-61c90870.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1120b2fa.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-4c2d52e3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d0087e11.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-820aece8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-44ed129f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-77b05b3b.js">
+		<link rel="modulepreload" href="./_app/immutable/start-4d77d7bf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-5dcb2f76.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c48bcc76.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0bbef310.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-eb888511.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-1d77ed01.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-2986611f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-4ed75e98.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Pokémon Tera Raid Type Counter Calculator</title><!-- HEAD_svelte-wuca84_START --><!-- HEAD_svelte-wuca84_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Pokémon Tera Raid Type Counter Calculator</title><!-- HEAD_svelte-1hfgv1q_START -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
+	<script>window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-8L9PXM6PDZ');
+	</script><!-- HEAD_svelte-1hfgv1q_END --><!-- HEAD_svelte-wuca84_START --><!-- HEAD_svelte-wuca84_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -69,6 +66,7 @@
 					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li></ul></div></div></nav></header>
 
 	<main>
+
 <div id="raid-counter" class="divider"></div>
 
 <div class="container py-3 raid-counter"><div class="row px-0"><div class="col-12"><h2 class="jumbotron-heading">Tera Raid Counter</h2>
@@ -76,7 +74,7 @@
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 									<form class="pokemon-search-form svelte-1xiyio"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-372 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-953 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -1067,6 +1065,10 @@
 														<div class="type type__symbol-autocomplete" data-type="Fighting"></div>
 														<div class="type type__symbol-autocomplete" data-type="Ice"></div></div>
           </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/741.min.png');"></div>
+														<span class="label"><!-- HTML_TAG_START -->Oricorio (Baile Style)<!-- HTML_TAG_END --></span>
+														<div class="type type__symbol-autocomplete" data-type="Fire"></div>
+														<div class="type type__symbol-autocomplete" data-type="Flying"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/741.min.png');"></div>
 														<span class="label"><!-- HTML_TAG_START -->Oricorio (Pom-Pom Style)<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Electric"></div>
 														<div class="type type__symbol-autocomplete" data-type="Flying"></div></div>
@@ -1078,10 +1080,6 @@
 														<span class="label"><!-- HTML_TAG_START -->Oricorio (Sensu Style)<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Flying"></div>
 														<div class="type type__symbol-autocomplete" data-type="Ghost"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/741.min.png');"></div>
-														<span class="label"><!-- HTML_TAG_START -->Oricorio (Baile Style)<!-- HTML_TAG_END --></span>
-														<div class="type type__symbol-autocomplete" data-type="Flying"></div>
-														<div class="type type__symbol-autocomplete" data-type="Fire"></div></div>
           </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/744.min.png');"></div>
 														<span class="label"><!-- HTML_TAG_START -->Rockruff<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Rock"></div>
@@ -1763,7 +1761,7 @@
 							<div class="raid-card-background-1"></div></div></div></div></div>
 
 			
-			<div class="row px-0 "><div class="col-12 col-lg-5"><div class="row"><h4 class="jumbotron-heading">Tera Attacks</h4>
+			<div class="row px-0 "><div class="col-12 col-lg-5"><div class="row"><h4 class="jumbotron-heading">Tera Raid Pokémon</h4>
 						<table class="table table-sm table-bordered"><tbody><tr><th>Possible Attacks</th>
 										<th>Power</th>
 										<th>Category</th></tr>
@@ -1797,14 +1795,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="4z8egw">
-			import { start } from "./_app/immutable/start-52d3db57.js";
+		<script type="module" data-sveltekit-hydrate="g663lj">
+			import { start } from "./_app/immutable/start-4d77d7bf.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="4z8egw"]').parentNode,
-				version: "1672921536443",
+				target: document.querySelector('[data-sveltekit-hydrate="g663lj"]').parentNode,
+				version: "1672999942739",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
