--- a/type-table.html
+++ b/type-table.html
@@ -29,27 +29,24 @@
 		<meta name="author" content="Blitzlord" />
 		<base href="/" />
 		<link rel="canonical" href="https://terastal.net/" />
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
-			gtag('config', 'G-8L9PXM6PDZ');
-		</script>
-		<!-- Bootstrap -->
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-52d3db57.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-61c90870.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1120b2fa.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-4c2d52e3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d0087e11.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-aacb2486.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-77b05b3b.js">
+		<link rel="modulepreload" href="./_app/immutable/start-4d77d7bf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-5dcb2f76.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c48bcc76.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0bbef310.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-eb888511.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-6c84ceee.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-4ed75e98.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-1v6qfvu_START --><!-- HEAD_svelte-1v6qfvu_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-cwnwos_START -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
+	<script>window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-8L9PXM6PDZ');
+	</script><!-- HEAD_svelte-cwnwos_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -66,7 +63,6 @@
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/type-table.html">Type Table</a></li></ul></div></div></nav></header>
 
 	<main>
-
 <div id="type-table" class="divider"></div>
 
 <div class="container py-3 tera-type-calcultator"><div class="row"><div class="col-12"><h2 class="jumbotron-heading">Type Table</h2>
@@ -159,14 +155,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1466lgj">
-			import { start } from "./_app/immutable/start-52d3db57.js";
+		<script type="module" data-sveltekit-hydrate="1cfrdd5">
+			import { start } from "./_app/immutable/start-4d77d7bf.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1466lgj"]').parentNode,
-				version: "1672921536443",
+				target: document.querySelector('[data-sveltekit-hydrate="1cfrdd5"]').parentNode,
+				version: "1672999942739",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
