--- a/type-table.html
+++ b/type-table.html
@@ -37,21 +37,21 @@
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-37f3d700.js">
+		<link rel="modulepreload" href="./_app/immutable/start-b9901583.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-77b07260.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-acf8aece.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-cwnwos_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Pokémon Tera Type Table - Terastal.net</title><!-- HEAD_svelte-1hndsnr_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-8L9PXM6PDZ');
-	</script><!-- HEAD_svelte-cwnwos_END -->
+	</script><!-- HEAD_svelte-1hndsnr_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -162,13 +162,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="ug3zbt">
-			import { start } from "./_app/immutable/start-37f3d700.js";
+			import { start } from "./_app/immutable/start-b9901583.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="ug3zbt"]').parentNode,
-				version: "1673617085963",
+				version: "1673617401220",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
